[package]
name = "subterm"
version = "0.0.1"
edition = "2021"
description = "A library for managing pools of interactive subprocesses"
license = "MIT OR Apache-2.0"

[dependencies]
bstr = "1.11.3"
tokio = { version = "1.35", default-features = false, features = [ "rt", "rt-multi-thread", "io-util", "process", "sync", "time"] }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1.35", default-features = false, features = ["io-util", "rt", "rt-multi-thread", "macros", "sync", "time", "process"] }
